@startuml

title __TECLADOCOMPONENT's Class Diagram__\n

  namespace br.com.bancoms.components.tecladoComponent {
    class br.com.bancoms.components.tecladoComponent.TecladoAdapter {
        + TecladoAdapter()
        + anexarTeclado()
        + getTeclado()
    }
  }
  

  namespace br.com.bancoms.components.tecladoComponent {
    class br.com.bancoms.components.tecladoComponent.TecladoView {
        + numeroField : TextField
        - botaoApagar : Button
        - botaoEntrar : Button
        - botoesNumericos : List<Button>
        - gridBotoes : GridPane
        - vboxView : VBox
        + TecladoView()
        + addFieldExterno()
        + addFieldInterno()
        + anexarEventos()
        - adicionarBotao()
    }
  }
  

  br.com.bancoms.components.tecladoComponent.TecladoAdapter o-- br.com.bancoms.components.tecladoComponent.TecladoView : tecladoView
  br.com.bancoms.components.tecladoComponent.TecladoAdapter o-- br.com.bancoms.components.tecladoComponent.tipos.Teclado : tecladoComponent
  br.com.bancoms.components.tecladoComponent.TecladoView -up-|> javafx.scene.Group


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
